update all verificatrion project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /build/
 /nbproject/private/
+/login_signup_and_vrification/build/
+/login_Signup_and_verification/build/
+/login_Signup_and_verification/nbproject/private/
