--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,4 +8,9 @@
         <error-code>404</error-code>
         <location>/WEB-INF/404.jsp</location>
     </error-page>
+    
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/500.jsp</location>
+    </error-page>
 </web-app>
